--- a/src/main/webapp/customer/newSR.xhtml
+++ b/src/main/webapp/customer/newSR.xhtml
@@ -317,7 +317,9 @@
                 <div class="page-footer">
 
                     <div class="progress">
-                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="#{casoCustomerController.stepNewCasoIndex * 25}" aria-valuemin="0" aria-valuemax="100" style="width: #{casoCustomerController.stepNewCasoIndex * 25}\%">
+                        <div class="progress-bar progress-bar-success" role="progressbar" 
+                             aria-valuenow="#{casoCustomerController.stepNewCasoIndex * 25}" 
+                             aria-valuemin="0" aria-valuemax="100" style="width: #{casoCustomerController.stepNewCasoIndex * 25}\%">
                             <span>#{casoCustomerController.stepNewCasoIndex * 25}% de avance</span>
                         </div>
                     </div>
