--- a/src/main/webapp/public/inscripcion_evento.xhtml
+++ b/src/main/webapp/public/inscripcion_evento.xhtml
@@ -5,7 +5,7 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>Inscripción - HelpDesk Brotec-Icafal</title>
+        <title>Inscripción Evento</title>
         
         <link rel="dns-prefetch" href="//netdna.bootstrapcdn.com" />            
         <!-- Latest compiled and minified CSS -->
@@ -95,9 +95,6 @@
 
             </h:form>
         </p:dialog>    
-
-
-
 
         <h:form id="form_">
 
