Se agrega carga full (proyectos mas clientes)

--- a/src/main/webapp/script/cliente/List.xhtml
+++ b/src/main/webapp/script/cliente/List.xhtml
@@ -46,6 +46,7 @@
 
                         <p:toolbarGroup align="left">
                             <p:commandButton ajax="false" action="#{clienteController.prepareCreateMasivo()}" value="Importación masiva de clientes" icon="fa fa-upload" />
+                            <p:commandButton ajax="false" action="#{clienteController.prepareCreateMasivoFull()}" value="Importación masiva de clientes y productos" icon="fa fa-upload" />
                             <p:commandButton ajax="false" action="cargarClienteProducto" value="Importar Relación Cliente/#{applicationBean.productSubComponentDescription}" icon="fa fa-upload" />
                         </p:toolbarGroup>
 
