fix form embedded
Conflicts:
	src/main/java/com/itcs/helpdesk/jsfcontrollers/CasoController.java
	src/main/java/com/itcs/helpdesk/jsfcontrollers/CustomerCasoController.java
	src/main/webapp/public/newTicketEmbedded.xhtml

--- a/src/main/webapp/public/newTicketEmbedded.xhtml
+++ b/src/main/webapp/public/newTicketEmbedded.xhtml
@@ -107,7 +107,8 @@
 
                 <h:panelGroup layout="block" styleClass="form-group" rendered="#{embeddedFromNewTicketController.stepNewCasoIndex eq 1}">
                     <label for="emailCliente">Su Email:</label>
-                    <h:inputText id="emailCliente" value="#{embeddedFromNewTicketController.emailCliente_wizard}" 
+                    <h:inputText id="emailCliente" value="#{casoCustomerController.emailCliente_wizard}" 
+                                 maxlength="80"
                                  validator="#{inputValidationBean.validarEmail}"
                                  styleClass="form-control"
                                  required="true" requiredMessage="Un Email Válido de cliente es requerido para identificar al cliente del caso.">                                        
@@ -248,12 +249,11 @@
                                       mode="advanced"
                                       dragDropSupport="true"
                                       auto="true"
-                                      update=" listaadjuntos fileupload"
+                                      update=" atachments fileupload"
                                       multiple="true"  />
 
-                        <h:panelGroup id="listaadjuntos" layout="block" rendered="#{not empty embeddedFromNewTicketController.selected.attachmentList}">
-
-                            <p:dataTable var="fileitem" value="#{embeddedFromNewTicketController.selected.attachmentList}" 
+                            <p:dataTable var="fileitem" value="#{casoCustomerController.selected.attachmentList}" 
+                                         rendered="#{not empty casoCustomerController.selected.attachmentList}"
                                          emptyMessage="No hay archivos adjuntos.">
 
                                 <p:column headerText="Nombre Archivo">
@@ -261,12 +261,11 @@
                                 </p:column>
 
                                 <p:column headerText="">
-                                    <p:commandButton icon="ui-icon-close" update=":form:listaadjuntos">
-                                        <p:collector unique="true" removeFrom="#{embeddedFromNewTicketController.selected.attachmentList}"  value="#{fileitem}"/>
+                                    <p:commandButton icon="ui-icon-close" update=":form">
+                                        <p:collector unique="true" removeFrom="#{casoCustomerController.selected.attachmentList}"  value="#{fileitem}"/>
                                     </p:commandButton>
                                 </p:column>
                             </p:dataTable> 
-                        </h:panelGroup>
 
                     </p:panel>
 
