--- a/src/main/webapp/script/index.xhtml
+++ b/src/main/webapp/script/index.xhtml
@@ -322,7 +322,7 @@
                                 </pe:switch>
                         </p:column>
                         
-                        <p:column headerText="SLA">
+                        <p:column sortBy="#{item.nextResponseDue}" headerText="SLA">
 
                             <pe:switch id="switchTicketAlertState" value="#{item.isOpen().toString()}">  
                                 <pe:case value="true">  
