Se Ingresan textos de ayuda y se arregla tipo texto de alertas.

--- a/src/main/webapp/script/audit_log/List.xhtml
+++ b/src/main/webapp/script/audit_log/List.xhtml
@@ -12,7 +12,7 @@
         </ui:define>
         <ui:define name="west">
             <p:accordionPanel multiple="true" cache="true" id="accionesaccordion1">
-                <p:tab title="Logs" id="accionestab1">
+                <p:tab title="Logs de Casos" id="accionestab1">
                     <h:outputLabel escape="false" value="#{bundle.ayudaLogs}"/>
                 </p:tab>
             </p:accordionPanel>
