--- a/src/main/webapp/script/report_graphs/reports.xhtml
+++ b/src/main/webapp/script/report_graphs/reports.xhtml
@@ -17,7 +17,7 @@
                     //export image
                     $('#output').empty().append(chart.exportAsImage());
                     //show the dialog
-                    dlg.show();
+                    PF('dlg').show();
                 }
                 //]]>
             </script>
