--- a/src/main/webapp/script/caso/Create.xhtml
+++ b/src/main/webapp/script/caso/Create.xhtml
@@ -300,7 +300,7 @@
                                                 <h:outputText value="${casoController.nombreArchivoParaDesplegar(fileitem.nombreArchivo)}" title="#{fileitem.nombreArchivo}"/>                                               
 
                                                 <p:commandButton icon="ui-icon-close"
-                                                                 onclick="borrarAttachment.show();">
+                                                                 onclick="PF('borrarAttachment').show();">
                                                     <f:setPropertyActionListener target="#{casoController.idFileRemove}" value="#{fileitem.idAttachment}"/>
                                                 </p:commandButton>
 
